--- a/desafios/12/style.css
+++ b/desafios/12/style.css
@@ -57,6 +57,10 @@ section {
     font-size: 3.5vw;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -65,12 +69,28 @@ section.normal {
 section.imagem {
     background-color: rgb(20, 20, 20);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.301);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.123);
+    background-color: rgba(0, 0, 0, 0.507);
+    text-shadow: 1px 1px 0px black;
+    
+}
+
+section#img01 {
+    background-image: url('../12/imagens/background001.jpg');
+    background-position: right center;
+    
+
+}
+
+section#img02 {
+    background-image: url('../12/imagens/background002.jpg');
 }
 
 footer {
